feat: return feedback target on cancelled runs